Bug 404422 - Non-optimal vertical position of added messages to sequence diagrams
Summary: Non-optimal vertical position of added messages to sequence diagrams
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.27.2 (KDE Applications 18.12.2)
Platform: Other All
: NOR normal
Target Milestone: ---
Assignee: Umbrello Development Group
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-02-15 23:12 UTC by Ralf Habacker
Modified: 2019-02-18 09:50 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.27.3 (KDE Applications 18.12.3)
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ralf Habacker 2019-02-15 23:12:49 UTC
The vertical position of messages added to objects in a sequence diagram is based on the position of the mouse pointer when selecting the second object. This often leads to the fact that the generated messages have to be moved afterwards, since one usually wants to have the new message at the vertical position of the first selected object.

STEPS TO REPRODUCE
1. start umbrello
2. add sequence diagram
3. add two objects
4. add a message between both objects
5. move the message down
6. start adding a new message below the first message
7. click on the vertical line of second object to add the message

OBSERVED RESULT
The added message is located above the first message

EXPECTED RESULT
The added message should be located on the vertical position where the first object has been selected.


SOFTWARE/OS VERSIONS
Windows: 7
Comment 1 Ralf Habacker 2019-02-18 09:50:24 UTC
Git commit 06425ca08ce44422ab2e16d957519e73db059777 by Ralf Habacker.
Committed on 18/02/2019 at 09:50.
Pushed by habacker into branch 'Applications/18.12'.

Fix 'Non-optimal vertical position of added messages to sequence diagrams'
FIXED-IN: 2.27.3 (KDE Applications 18.12.3)

M  +1    -4    umbrello/toolbarstatemessages.cpp
M  +2    -1    umbrello/umlwidgets/messagewidget.cpp

https://commits.kde.org/umbrello/06425ca08ce44422ab2e16d957519e73db059777