Fix 'Non-optimal vertical position of added messages to sequence diagrams'

BUG:404422
FIXED-IN: 2.27.3 (KDE Applications 18.12.3)